--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,8 @@ h2 {
 		height: auto;
 	}
 	.transition {
-
+		width: 200px;
+		height: auto;
 	}
 }
 @media (min-width: 440px) {
@@ -175,6 +176,9 @@ h2 {
 
 }
 @media (min-width: 768px) {
+	h1 {
+		font-size: 120px;
+	}
   	.fighter0, .fighter1 {
   		width: 250px;
     	height: auto;
